# mapping_of_social_and_environmental_due_diligence_legislation

./: .gitignore  README.md  app.py  pyproject.toml
assets/: styles.css
data/: legislations.csv  six_steps.csv
ui/: __init__.py  fragments.py
